syntax = "proto3";

option csharp_namespace = "GrpcFileReader";

package GrpcFileReader;

service FileReaderService {
  rpc GetFileBytes(GetFileBytesRequest) returns (stream GetFileBytesResponse) {}
  rpc GetFileNames(GetFileNamesRequest) returns (stream GetFileNamesResponse) {}
}

message GetFileBytesRequest {
  string input_string = 1;
}

message GetFileBytesResponse {
  bytes data = 1;
}

message GetFileNamesRequest {
  // You can add fields here if needed
}

message GetFileNamesResponse {
  string file_names = 1;
}